--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@ body {
     border-radius: 5px;
 }
 
+.process-block {
+    background-color: #e9ecef;
+    border-radius: 5px;
+}
+
 .faq-block {
     background-color: #e9ecef;
     border-radius: 5px;
